<resources>
    <string name="app_name">Hitung Bangun</string>
    <string name="panjangPP">Panjang (AB)</string>
    <string name="cm">cm</string>
    <string name="lebarPP">Lebar (BC)</string>\
    <string name="btnHitung">Hitung</string>
    <string name="btnReset">Reset</string>
    <string name="judulPP">Persegi Panjang</string>
    <string name="keliling">Keliling :</string>
    <string name="luas">Luas :</string>
    <string name="limapuluh">50</string>
    <string name="cmkuadrat"> cm<sup><small>2</small></sup></string>
    <string name="hasilKeliling">%1$.0f cm</string>
    <string name="hasilLuas">%1$.0f</string>
    <string name="panjang_invalid">Panjang diperlukan!</string>
    <string name="lebar_invalid">Lebar diperlukan!</string>
    <string name="rumus_pp">Rumus Persegi Panjang</string>
    <string name="rumus">Rumus</string>
    <string name="keliling_pp">Rumus Keliling</string>
    <string name="luas_pp">Rumus Luas</string>
    <string name="rumus_keliling_pp">Keliling = 2 x (Panjang + Lebar)</string>
    <string name="rumus_luas_pp">Luas = Panjang x Lebar</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Hitung Bangun merupakan sebuah aplikasi Android untuk menghitung Luas dan Keliling Persegi Panjang sebagai sarana belajar untuk anak-anak.\n\nAplikasi ini dibuat untuk memenuhi assessment mata kuliah Pemrograman Untuk Perangkat Bergerak 1. \n\nCopyright © 2022 Yusuf Abidin Nurrahman.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="template_bagikan">Panjang: %1$s cm\nLebar: %2$s cm\n\nKeliling: %3$s\nLuas: %4$s cm<sup><small>2</small></sup></string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">Panjang: %1$.0f cm\nLebar: %2$.0f cm</string>
    <string name="data_x">Keliling: %1$.0f cm\nLuas: %2$.0f cm<sup><small>2</small></sup></string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus Semua Histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="action_switch_layout">Ubah layout</string>
    <string name="bangun_datar">Bangun Datar</string>

    <string name="jumlahSudut">Jumlah Sudut : </string>
    <string name="rumusLuas">Rumus Luas : </string>
    <string name="rumusKeliling">Rumus Keliling :</string>
    <string name="rumus_luas">Rumus Luas :</string>
    <string name="jumlah_sudut">Jumlah Sudut :</string>
    <string name="koneksi_error">Koneksi Error</string>
    
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data bangun datar otomatis</string>

    <string name="notif_title">Ada yang baru nih!</string>
    <string name="notif_text">Yuk cek biar tambah pengetahuan!</string>
</resources>