<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HitungFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/judulPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulPP"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/judulPP"
            android:src="@drawable/persegipanjang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            />

        <TextView
            android:id="@+id/panjangPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/panjangPP"
            app:layout_constraintBottom_toBottomOf="@id/editTextpanjang"
            app:layout_constraintTop_toTopOf="@id/editTextpanjang"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editTextpanjang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:ems="10"
            android:paddingEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/panjangPP"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@id/editTextpanjang"
            app:layout_constraintBottom_toBottomOf="@id/editTextpanjang"
            app:layout_constraintTop_toTopOf="@id/editTextpanjang"/>

        <TextView
            android:id="@+id/lebarPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lebarPP"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/editTextlebar"
            app:layout_constraintBottom_toBottomOf="@id/editTextlebar"/>

        <EditText
            android:id="@+id/editTextlebar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:paddingEnd="32dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/editTextpanjang"
            app:layout_constraintTop_toBottomOf="@id/editTextpanjang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            app:layout_constraintEnd_toEndOf="@id/editTextlebar"
            app:layout_constraintBottom_toBottomOf="@id/editTextlebar"
            app:layout_constraintTop_toTopOf="@id/editTextlebar"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnHitung"
            app:layout_constraintStart_toStartOf="@id/editTextlebar"
            app:layout_constraintTop_toBottomOf="@id/editTextlebar" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/btnReset"
            app:layout_constraintBottom_toBottomOf="@id/btnHitung"
            app:layout_constraintStart_toEndOf="@id/btnHitung"
            app:layout_constraintTop_toBottomOf="@id/editTextlebar"
            app:layout_constraintTop_toTopOf="@id/btnHitung" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnHitung"/>

        <TextView
            android:id="@+id/keliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keliling"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/hasilKeliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keliling"
            android:text="30 cm"

            />


        <TextView
            android:id="@+id/luas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/hasilKeliling"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/hasilLuas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/cmKuadrat"
            app:layout_constraintTop_toBottomOf="@id/luas"
            app:layout_constraintStart_toStartOf="@id/luas"
            android:text="@string/limapuluh"/>

        <TextView
            android:id="@+id/cmKuadrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/hasilLuas"
            app:layout_constraintTop_toTopOf="@id/hasilLuas"
            app:layout_constraintBottom_toBottomOf="@id/hasilLuas"
            app:layout_constraintEnd_toEndOf="@id/luas"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/cmkuadrat"/>

        <Button
            android:id="@+id/buttonRumus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rumus"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/hasilLuas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            tools:visibility="visible"

            />





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>